@@ -173,12 +173,6 @@ public abstract class CFAbstractTransfer<
         Tree preTree = analysis.getCurrentTree();
         Pair<Tree, AnnotatedTypeMirror> preCtxt = factory.getVisitorState().getAssignmentContext();
         analysis.setCurrentTree(tree);
-        TreePath previousTreePath = factory.getVisitorState().getPath();
-        if (node instanceof MethodInvocationNode) {
-            // This is a work around for issue #1520.
-            // MethodInvocationNode is the only node that save's the TreePath.
-            factory.getVisitorState().setPath(((MethodInvocationNode) node).getTreePath());
-        }
         // is there an assignment context node available?
         if (node != null && node.getAssignmentContext() != null) {
             // get the declared type of the assignment context by looking up the
@@ -210,7 +204,6 @@ public abstract class CFAbstractTransfer<
         AnnotatedTypeMirror at = factory.getAnnotatedType(tree);
         analysis.setCurrentTree(preTree);
         factory.getVisitorState().setAssignmentContext(preCtxt);
-        factory.getVisitorState().setPath(previousTreePath);
         return analysis.createAbstractValue(at);
     }
 
